After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659252 - dvdreadsrc: various fixes for titles not starting on a new file
dvdreadsrc: various fixes for titles not starting on a new file
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
unspecified
Other All
: Normal normal
: 0.10.19
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-16 14:36 UTC by Vincent Penquerc'h
Modified: 2011-09-19 07:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dvdreadsrc: fix sector search for packed titles (1.80 KB, patch)
2011-09-16 14:36 UTC, Vincent Penquerc'h
committed Details | Review
dvdreadsrc: fix sector seeking (2.04 KB, patch)
2011-09-16 14:36 UTC, Vincent Penquerc'h
committed Details | Review
dvdreadsrc: take into account first sector of the current title (2.62 KB, patch)
2011-09-16 14:36 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-09-16 14:36:41 UTC
dvdreadsrc: various fixes for titles not starting on a new file
Comment 1 Vincent Penquerc'h 2011-09-16 14:36:43 UTC
Created attachment 196725 [details] [review]
dvdreadsrc: fix sector search for packed titles

Some DVD titles are packed in a single set, and we need to use
the correct table to map times to sectors.
Comment 2 Vincent Penquerc'h 2011-09-16 14:36:45 UTC
Created attachment 196726 [details] [review]
dvdreadsrc: fix sector seeking

It was overly complicated, and did not take into account the offset
needed for titles which do not start on a new file.
Comment 3 Vincent Penquerc'h 2011-09-16 14:36:48 UTC
Created attachment 196727 [details] [review]
dvdreadsrc: take into account first sector of the current title

This fixes seeking on titles which do not start on a new file.
Comment 4 Sebastian Dröge (slomo) 2011-09-19 07:54:04 UTC
commit 40274ad92fe98900dc128b2a76b5c0f10c48d26b
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Fri Sep 16 15:35:06 2011 +0100

    dvdreadsrc: take into account first sector of the current title
    
    This fixes seeking on titles which do not start on a new file.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=659252

commit 59ed3b7bf2898adba62bf71148135b3584f16289
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Fri Sep 16 15:03:54 2011 +0100

    dvdreadsrc: fix sector seeking
    
    It was overly complicated, and did not take into account the offset
    needed for titles which do not start on a new file.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=659252

commit 20464efc8ea14d12862720171491a4d7ff550caf
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Fri Sep 16 13:42:53 2011 +0100

    dvdreadsrc: fix sector search for packed titles
    
    Some DVD titles are packed in a single set, and we need to use
    the correct table to map times to sectors.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=659252