dvdreadsrc: fix sector search for packed titles

Some DVD titles are packed in a single set, and we need to use
the correct table to map times to sectors.

https://bugzilla.gnome.org/show_bug.cgi?id=659252